create login user and admin

--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -9,6 +9,7 @@
           <th scope="col">No</th>
           <th scope="col">Title</th>
           <th scope="col">Category</th>
+          <th scope="col">Price</th>
           <th scope="col">Description</th>
           <th>Image</th>
         </tr>
@@ -19,6 +20,7 @@
           <th scope="row"><span class="row-number"></span></th>
           <td>{{this.Name}}</td>
           <td>{{this.Category}}</td>
+          <td>$ {{this.price}}</td>
           <td>{{this.Description}}</td>
           <td><img style="width: 50px; height: 50px" src="/product-images/{{this._id}}.jpg" alt=""></td>
           <td>
