--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-6 m-auto" >
         <div class="container mt-5 pl-5" >
-            <h2 class="text-center">SIGN UP</h2>
+            <h2 class="text-center text-secondary">SIGN UP</h2>
             <form action="/signup" method="post">
                  <div class="form-group">
                     <label for="">Name</label>
@@ -15,8 +15,8 @@
                     <label for="">Password</label>
                     <input type="password" class="form-control" name="Password" placeholder="Password">
                 </div>
-                <a href="/login">Already have an account</a>
-                <button type="submit" class="btn btn-primary float-right">Signup</button>
+                <a href="/login" class="col-sm-4 btn btn-info">Already have an account</a>
+                <button type="submit" class="col-sm-2 btn btn-primary float-right">Signup</button>
             </form>
         </div>
     </div>
