--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -1,6 +1,6 @@
  <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Admin page</a>
+            <a class="navbar-brand" href="/admin">Admin page</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -17,11 +17,34 @@
                    <li class="nav-item">
                         <a class="nav-link" href="#">All users</a>
                     </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
+                     <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
+                </ul>
+                 <div class="dropdown">
+  <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+   {{#if admin}}
+    {{superadmin.Name}}
+   {{else}}
+   Account
+   {{/if}}
+  
+  </button>
+   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    {{#if admin}}
+        <a class="dropdown-item "  href="/logout">Logout</a>
+
+   {{else}}
+    <a class="dropdown-item "  href="/admin/admin-login">Login</a>
+   Account
+   {{/if}}
+
+    
+    
+   
+  </div>
+</div>
             </div>
         </nav>
     </header>
