--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -21,7 +21,7 @@
       
     </ul>
    <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
    {{#if user}}
    {{user.Name}}
    {{else}}
@@ -31,7 +31,7 @@
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
     {{#if user}}
-    <a class="dropdown-item" href="/logout">Logout</a>
+    <a class="dropdown-item "  href="/logout">Logout</a>
    {{else}}
     <a class="dropdown-item" href="/login">Login</a>
    {{/if}}
